# ChatServer

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  autobuild.sh  cmake_install.cmake
include/: mypublic.hpp  public.hpp
include/server/: chatserver.hpp  chatservice.hpp  friendmodel.hpp  user.hpp  usermodel.hpp
include/server/db/: db.h
include/server/model/: group.hpp  offlinemessagemodel.hpp  usermodel.hpp
include/server/redis/: redis.hpp
src/: Makefile  cmake_install.cmake
src/client/: Makefile  cmake_install.cmake  main.cpp
src/server/: CMakeLists.txt  Makefile  chatserver.cpp  chatservice.cpp  cmake_install.cmake  main.cpp  offlinemessagemodel.cpp  usermodel.cpp
src/server/db/: db.cpp
src/server/model/: friendmodel.cpp  groupmodel.cpp  usermodel.cpp
test/testJSON/: a  jsonTest.cpp
test/testMuduo/: CMakeLists.txt  muduoServer.cpp
